<?php
use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    public function up(): void {
        Schema::create('permissions', function (Blueprint $table) {
            $table->id();
            $table->string('name')->unique();        // mahasiswa.view, nilai.create, dst.
            $table->string('display_name');
            $table->string('module');                // mahasiswa, nilai, jadwal, dst.
            $table->timestamps();
        });

        // Pivot: role_permission
        Schema::create('role_permission', function (Blueprint $table) {
            $table->foreignId('role_id')->constrained('roles')->onDelete('cascade');
            $table->foreignId('permission_id')->constrained('permissions')->onDelete('cascade');
            $table->primary(['role_id','permission_id']);
        });
    }
    public function down(): void {
        Schema::dropIfExists('role_permission');
        Schema::dropIfExists('permissions');
    }
};